--- a/admin/index.html
+++ b/admin/index.html
@@ -189,9 +189,25 @@
             align-items: center;
             font-family: "Segoe UI", Tahoma, sans-serif;
             color: #fff;
+            overflow: hidden;
         }
-        #reboot h1 { font-size: 2rem; font-weight: 200; animation: rebootBlink 1s infinite; }
+        #reboot h1 { font-size: 2rem; font-weight: 200; animation: rebootBlink 1s infinite; z-index: 2; position: relative; }
+        #reboot img { z-index: 2; position: relative; }
         @keyframes rebootBlink { 0%, 50% { opacity: 1; } 51%, 100% { opacity: 0.5; } }
+        #kernel-log {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            font-family: "Courier New", monospace;
+            font-size: 12px;
+            color: #0f0;
+            padding: 10px;
+            box-sizing: border-box;
+            overflow: hidden;
+            z-index: 1;
+            opacity: 0.7;
+        }
+        #kernel-log div { white-space: nowrap; }
     </style>
 </head>
 <body>
@@ -259,6 +275,7 @@
     </div>
 
     <div id="reboot">
+        <div id="kernel-log"></div>
         <img src="/images/naughty-santa.webp" alt="" style="max-width: 300px; margin-bottom: 30px;">
         <h1>Rebooting....</h1>
     </div>
@@ -314,6 +331,71 @@
                 rick.style.filter = 'drop-shadow(0 0 ' + glowSize + 'px rgba(255,255,255,0.9)) hue-rotate(' + hue + 'deg) saturate(' + saturation + '%)';
 
                 animationFrame = requestAnimationFrame(animateRick);
+            }
+
+            // Kernel boot messages for reboot screen
+            var kernelLog = document.getElementById('kernel-log');
+            var kernelMessages = [
+                '[    0.000000] Linux version 6.8.0-90-generic (buildd@lcy02-amd64-115)',
+                '[    0.000000] Command line: BOOT_IMAGE=/vmlinuz-6.8.0-90-generic root=/dev/mapper/ubuntu--vg-ubuntu--lv ro quiet splash',
+                '[    0.000000] KERNEL supported cpus:',
+                '[    0.000000]   Intel GenuineIntel',
+                '[    0.000000]   AMD AuthenticAMD',
+                '[    0.000000] BIOS-provided physical RAM map:',
+                '[    0.000000] NX (Execute Disable) protection: active',
+                '[    0.000000] Hypervisor detected: KVM',
+                '[    0.000004] tsc: Detected 2400.000 MHz processor',
+                '[    0.004215] Initializing cgroup subsys cpuset',
+                '[    0.004218] Initializing cgroup subsys cpu',
+                '[    0.012841] Dentry cache hash table entries: 524288',
+                '[    0.016001] Memory: 3014256K/3145216K available',
+                '[    0.028102] mce: CPU0: Thermal monitoring enabled (TM1)',
+                '[    0.040000] smpboot: CPU0: Intel(R) Xeon(R) CPU E5-2680 v4 @ 2.40GHz',
+                '[    0.056100] smp: Brought up 1 node, 4 CPUs',
+                '[    0.068102] devtmpfs: initialized',
+                '[    0.080001] NET: Registered PF_NETLINK/PF_ROUTE protocol family',
+                '[    0.096000] PCI: Using configuration type 1 for base access',
+                '[    0.112102] ACPI: bus type PCI registered',
+                '[    0.152614] SCSI subsystem initialized',
+                '[    0.160102] ACPI: bus type USB registered',
+                '[    0.184000] Initialising HACKER DETECTED countermeasures...',
+                '[    0.200000] VFS: Disk quotas dquot_6.6.0',
+                '[    0.208615] AppArmor: AppArmor Filesystem Enabled',
+                '[    0.224000] NET: Registered PF_INET protocol family',
+                '[    0.248000] Initializing SANTA_SURVEILLANCE module...',
+                '[    0.252000] SANTA: Checking naughty/nice database...',
+                '[    0.256000] SANTA: WARNING - user flagged as NAUGHTY',
+                '[    0.260000] SANTA: Deploying countermeasures...',
+                '[    0.276000] Run /init as init process',
+                '[    0.280312] systemd[1]: systemd 255 running in system mode',
+                '[    0.292000] systemd[1]: Hostname set to <naughty-hacker>.',
+                '[    0.304000] systemd[1]: Starting systemd-journald.service...',
+                '[    0.320000] systemd[1]: Started systemd-journald.service.',
+                '[    0.328415] Loading RICKROLL driver v1.0...',
+                '[    0.332000] RICKROLL: Never gonna give you up...',
+                '[    0.336000] RICKROLL: Never gonna let you down...',
+                '[    0.344000] systemd[1]: Started NetworkManager.service.',
+                '[    0.372000] systemd[1]: Started docker.service.',
+                '[    0.380215] NAUGHTY_DETECTOR: Scan complete. Redirecting to homepage...',
+                '[    0.388000] systemd[1]: Reached target graphical.target.',
+            ];
+            var kernelIndex = 0;
+            var kernelInterval;
+
+            function startKernelLog() {
+                kernelLog.innerHTML = '';
+                kernelIndex = 0;
+                kernelInterval = setInterval(function() {
+                    if (kernelIndex >= kernelMessages.length) {
+                        kernelIndex = 0;
+                    }
+                    var line = document.createElement('div');
+                    line.textContent = kernelMessages[kernelIndex++];
+                    kernelLog.appendChild(line);
+                    while (kernelLog.children.length > 60) {
+                        kernelLog.removeChild(kernelLog.firstChild);
+                    }
+                }, 50);
             }
 
             // Collect browser fingerprint
@@ -391,6 +473,7 @@
                         setTimeout(function() {
                             bsod.style.display = 'none';
                             reboot.style.display = 'flex';
+                            startKernelLog();
                             setTimeout(function() { window.location.href = '/'; }, 4500);
                         }, 2000);
                     } else {
