feat: add psychedelic tie-dye mode
- Tie-dye spinning button in nav (conic gradient with hue rotation)
- Toggle activates trippy mode with independent random animations
- Each element has random delay, duration, and direction
- Individual letters in headers pulse with random timing
- Headers get chromatic text shadows and skew
- Images wave with hue shifts
- Cards wobble in 3D perspective
- Rainbow borders on sections
- Continuous random micro-movements for organic feel
- Click tie-dye button to activate/deactivate

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                         <ellipse cx="30" cy="15" rx="2.5" ry="3" fill="#006341"/>
                     </svg>
                 </button>
+                <button class="psychedelic-toggle" title="Psychedelic Mode" onclick="togglePsychedelic(); return false;"></button>
             </div>
         </div>
     </nav>
