feat(nav): reorganize menu and add Tech Retreats banner
- Changed menu order: About Services Support Projects Contact
- Added Tech Retreats banner ad after Contact link
- Moved IT Support carousel under Services section
- Changed support section id from it-support to support

Bumped to v1.0.17

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             <ul class="nav-links">
                 <li><a href="#about" data-i18n="nav.about">About</a></li>
                 <li><a href="#services" data-i18n="nav.services">Services</a></li>
-                <li><a href="paradise.html" data-i18n="nav.paradise" data-i18n-href-es="paradise-es.html">Paradise</a></li>
+                <li><a href="#support" data-i18n="nav.support">Support</a></li>
                 <li><a href="#projects" data-i18n="nav.projects">Projects</a></li>
                 <li><a href="#contact" data-i18n="nav.contact">Contact</a></li>
+                <li><a href="paradise.html" class="nav-banner" data-i18n="nav.retreats" data-i18n-href-es="paradise-es.html">Tech Retreats</a></li>
             </ul>
             <div class="lang-switcher">
                 <button class="lang-btn" data-lang="en" title="English" onclick="setLanguage('en'); return false;">
@@ -199,6 +200,54 @@
         </div>
     </section>
 
+    <section id="support" class="it-support">
+        <div class="container">
+            <h2 class="section-title" data-i18n="services.it.heading">Local IT Support</h2>
+            <p class="section-intro" data-i18n="services.it.intro">We selectively perform repairs and on-site IT services for local clients. We are no longer a walk-in brick and mortar business. Contact us to see if your problem is one we handle.</p>
+            <div class="it-services-scroller">
+                <div class="it-services-track">
+                    <a href="services/computer-repair.html" class="it-service-item">
+                        <img src="images/computer-repair-window-sign.webp" alt="Computer Repair">
+                    </a>
+                    <a href="services/data-recovery.html" class="it-service-item">
+                        <img src="images/data-recovery-window-sign.webp" alt="Data Recovery">
+                    </a>
+                    <a href="services/business-it.html" class="it-service-item">
+                        <img src="images/business-it-window-sign.webp" alt="Business IT">
+                    </a>
+                    <a href="services/computer-support.html" class="it-service-item">
+                        <img src="images/computer-support-window-sign.webp" alt="Computer Support">
+                    </a>
+                    <a href="services/computer-sales.html" class="it-service-item">
+                        <img src="images/computer-sale-window-sign.webp" alt="Computer Sales">
+                    </a>
+                    <a href="services/e-waste-recycling.html" class="it-service-item">
+                        <img src="images/computer-recycle-window-sign.webp" alt="Computer Recycling">
+                    </a>
+                    <!-- Duplicated for seamless loop -->
+                    <a href="services/computer-repair.html" class="it-service-item">
+                        <img src="images/computer-repair-window-sign.webp" alt="Computer Repair">
+                    </a>
+                    <a href="services/data-recovery.html" class="it-service-item">
+                        <img src="images/data-recovery-window-sign.webp" alt="Data Recovery">
+                    </a>
+                    <a href="services/business-it.html" class="it-service-item">
+                        <img src="images/business-it-window-sign.webp" alt="Business IT">
+                    </a>
+                    <a href="services/computer-support.html" class="it-service-item">
+                        <img src="images/computer-support-window-sign.webp" alt="Computer Support">
+                    </a>
+                    <a href="services/computer-sales.html" class="it-service-item">
+                        <img src="images/computer-sale-window-sign.webp" alt="Computer Sales">
+                    </a>
+                    <a href="services/e-waste-recycling.html" class="it-service-item">
+                        <img src="images/computer-recycle-window-sign.webp" alt="Computer Recycling">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="location-banner location-banner-malecon">
         <div class="location-banner-content">
             <h2 data-i18n="banner.malecon.title">Caribbean Craftsmanship</h2>
@@ -329,54 +378,6 @@
                         </a>
                         <span class="coming-badge" data-i18n="contact.coming">Coming Soon</span>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="it-support" class="it-support">
-        <div class="container">
-            <h2 class="section-title" data-i18n="services.it.heading">Local IT Support</h2>
-            <p class="section-intro" data-i18n="services.it.intro">We selectively perform repairs and on-site IT services for local clients. We are no longer a walk-in brick and mortar business. Contact us to see if your problem is one we handle.</p>
-            <div class="it-services-scroller">
-                <div class="it-services-track">
-                    <a href="services/computer-repair.html" class="it-service-item">
-                        <img src="images/computer-repair-window-sign.webp" alt="Computer Repair">
-                    </a>
-                    <a href="services/data-recovery.html" class="it-service-item">
-                        <img src="images/data-recovery-window-sign.webp" alt="Data Recovery">
-                    </a>
-                    <a href="services/business-it.html" class="it-service-item">
-                        <img src="images/business-it-window-sign.webp" alt="Business IT">
-                    </a>
-                    <a href="services/computer-support.html" class="it-service-item">
-                        <img src="images/computer-support-window-sign.webp" alt="Computer Support">
-                    </a>
-                    <a href="services/computer-sales.html" class="it-service-item">
-                        <img src="images/computer-sale-window-sign.webp" alt="Computer Sales">
-                    </a>
-                    <a href="services/e-waste-recycling.html" class="it-service-item">
-                        <img src="images/computer-recycle-window-sign.webp" alt="Computer Recycling">
-                    </a>
-                    <!-- Duplicated for seamless loop -->
-                    <a href="services/computer-repair.html" class="it-service-item">
-                        <img src="images/computer-repair-window-sign.webp" alt="Computer Repair">
-                    </a>
-                    <a href="services/data-recovery.html" class="it-service-item">
-                        <img src="images/data-recovery-window-sign.webp" alt="Data Recovery">
-                    </a>
-                    <a href="services/business-it.html" class="it-service-item">
-                        <img src="images/business-it-window-sign.webp" alt="Business IT">
-                    </a>
-                    <a href="services/computer-support.html" class="it-service-item">
-                        <img src="images/computer-support-window-sign.webp" alt="Computer Support">
-                    </a>
-                    <a href="services/computer-sales.html" class="it-service-item">
-                        <img src="images/computer-sale-window-sign.webp" alt="Computer Sales">
-                    </a>
-                    <a href="services/e-waste-recycling.html" class="it-service-item">
-                        <img src="images/computer-recycle-window-sign.webp" alt="Computer Recycling">
-                    </a>
                 </div>
             </div>
         </div>
@@ -537,7 +538,7 @@
             </div>
             <div class="footer-bottom">
                 <p data-i18n="footer.copyright">&copy; 2006&ndash;2026 South City Computer. All rights reserved.<br>Built in Rust at South City Computer.</p>
-                <p class="version-tag">v1.0.16</p>
+                <p class="version-tag">v1.0.17</p>
             </div>
         </div>
     </footer>
