feat(support): convert auto-carousel to swipeable grid
- Replaced auto-scrolling carousel with static grid on desktop
- Grid becomes horizontal swipeable on mobile (like services)
- Removed duplicate items and animation
- Cards snap when swiping on touch devices

Bumped to v1.0.18

--- a/index.html
+++ b/index.html
@@ -204,46 +204,25 @@
         <div class="container">
             <h2 class="section-title" data-i18n="services.it.heading">Local IT Support</h2>
             <p class="section-intro" data-i18n="services.it.intro">We selectively perform repairs and on-site IT services for local clients. We are no longer a walk-in brick and mortar business. Contact us to see if your problem is one we handle.</p>
-            <div class="it-services-scroller">
-                <div class="it-services-track">
-                    <a href="services/computer-repair.html" class="it-service-item">
-                        <img src="images/computer-repair-window-sign.webp" alt="Computer Repair">
-                    </a>
-                    <a href="services/data-recovery.html" class="it-service-item">
-                        <img src="images/data-recovery-window-sign.webp" alt="Data Recovery">
-                    </a>
-                    <a href="services/business-it.html" class="it-service-item">
-                        <img src="images/business-it-window-sign.webp" alt="Business IT">
-                    </a>
-                    <a href="services/computer-support.html" class="it-service-item">
-                        <img src="images/computer-support-window-sign.webp" alt="Computer Support">
-                    </a>
-                    <a href="services/computer-sales.html" class="it-service-item">
-                        <img src="images/computer-sale-window-sign.webp" alt="Computer Sales">
-                    </a>
-                    <a href="services/e-waste-recycling.html" class="it-service-item">
-                        <img src="images/computer-recycle-window-sign.webp" alt="Computer Recycling">
-                    </a>
-                    <!-- Duplicated for seamless loop -->
-                    <a href="services/computer-repair.html" class="it-service-item">
-                        <img src="images/computer-repair-window-sign.webp" alt="Computer Repair">
-                    </a>
-                    <a href="services/data-recovery.html" class="it-service-item">
-                        <img src="images/data-recovery-window-sign.webp" alt="Data Recovery">
-                    </a>
-                    <a href="services/business-it.html" class="it-service-item">
-                        <img src="images/business-it-window-sign.webp" alt="Business IT">
-                    </a>
-                    <a href="services/computer-support.html" class="it-service-item">
-                        <img src="images/computer-support-window-sign.webp" alt="Computer Support">
-                    </a>
-                    <a href="services/computer-sales.html" class="it-service-item">
-                        <img src="images/computer-sale-window-sign.webp" alt="Computer Sales">
-                    </a>
-                    <a href="services/e-waste-recycling.html" class="it-service-item">
-                        <img src="images/computer-recycle-window-sign.webp" alt="Computer Recycling">
-                    </a>
-                </div>
+            <div class="it-services-grid">
+                <a href="services/computer-repair.html" class="it-service-card">
+                    <img src="images/computer-repair-window-sign.webp" alt="Computer Repair">
+                </a>
+                <a href="services/data-recovery.html" class="it-service-card">
+                    <img src="images/data-recovery-window-sign.webp" alt="Data Recovery">
+                </a>
+                <a href="services/business-it.html" class="it-service-card">
+                    <img src="images/business-it-window-sign.webp" alt="Business IT">
+                </a>
+                <a href="services/computer-support.html" class="it-service-card">
+                    <img src="images/computer-support-window-sign.webp" alt="Computer Support">
+                </a>
+                <a href="services/computer-sales.html" class="it-service-card">
+                    <img src="images/computer-sale-window-sign.webp" alt="Computer Sales">
+                </a>
+                <a href="services/e-waste-recycling.html" class="it-service-card">
+                    <img src="images/computer-recycle-window-sign.webp" alt="Computer Recycling">
+                </a>
             </div>
         </div>
     </section>
@@ -538,7 +517,7 @@
             </div>
             <div class="footer-bottom">
                 <p data-i18n="footer.copyright">&copy; 2006&ndash;2026 South City Computer. All rights reserved.<br>Built in Rust at South City Computer.</p>
-                <p class="version-tag">v1.0.17</p>
+                <p class="version-tag">v1.0.18</p>
             </div>
         </div>
     </footer>
