feat(paradise): rebrand to "Hack in Paradise" with creative focus
- Changed nav banner from "Tech Retreats" to "Hack in Paradise"
- Updated paradise.html with new tagline: "Code in the Caribbean"
- Added "Break the Pattern. Find the Solution." intro
- New packages: Cenote Think Tank, Reef Reset, Sprint & Ship,
  Jungle Roadmap, Team Offsite, Extended Stay
- Added "Why It Works" section on creative business thinking
- Focus on unlocking creativity through environment change

Bumped to v1.0.19

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#support" data-i18n="nav.support">Support</a></li>
                 <li><a href="#projects" data-i18n="nav.projects">Projects</a></li>
                 <li><a href="#contact" data-i18n="nav.contact">Contact</a></li>
-                <li><a href="paradise.html" class="nav-banner" data-i18n="nav.retreats" data-i18n-href-es="paradise-es.html">Tech Retreats</a></li>
+                <li><a href="paradise.html" class="nav-banner" data-i18n="nav.retreats" data-i18n-href-es="paradise-es.html">Hack in Paradise</a></li>
             </ul>
             <div class="lang-switcher">
                 <button class="lang-btn" data-lang="en" title="English" onclick="setLanguage('en'); return false;">
@@ -517,7 +517,7 @@
             </div>
             <div class="footer-bottom">
                 <p data-i18n="footer.copyright">&copy; 2006&ndash;2026 South City Computer. All rights reserved.<br>Built in Rust at South City Computer.</p>
-                <p class="version-tag">v1.0.18</p>
+                <p class="version-tag">v1.0.19</p>
             </div>
         </div>
     </footer>
