--- a/paradise.html
+++ b/paradise.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet Me in Paradise | South City Computer - Remote Consulting Retreats</title>
-    <meta name="description" content="Schedule a consulting retreat in Puerto Morelos, Mexico. Tech development, business mentorship, and wellness packages in the Riviera Maya. Remote work and on-site retreats available.">
-    <meta name="keywords" content="consulting retreat, tech retreat, remote consulting, Puerto Morelos, Riviera Maya, business mentorship, Mexico consulting">
+    <title>Hack in Paradise | South City Computer - Creative Tech Retreats in Mexico</title>
+    <meta name="description" content="Unlock creative business thinking in Puerto Morelos, Mexico. Tech retreats, strategy sessions in cenotes, reef diving breaks, and jungle brainstorms. Code in the Caribbean.">
+    <meta name="keywords" content="tech retreat, hack in paradise, creative thinking, business retreat, Puerto Morelos, Riviera Maya, cenote strategy, Mexico coworking">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192.png">
@@ -62,15 +62,16 @@
 
     <section class="location-banner location-banner-beach">
         <div class="location-banner-content">
-            <h1 data-i18n="paradise.title">Meet Me in Paradise</h1>
-            <p data-i18n="paradise.tagline">Schedule a vacation with the money you'll save hiring us. Plan your project surrounded by natural beauty.</p>
+            <h1 data-i18n="paradise.title">Hack in Paradise</h1>
+            <p data-i18n="paradise.tagline">Code in the Caribbean. Unlock creative thinking where the jungle meets the sea.</p>
         </div>
     </section>
 
     <section class="paradise-consulting paradise-page">
         <div class="container">
             <div class="paradise-intro">
-                <p data-i18n="paradise.intro">Like travel dentistry, but for tech. Fly to the Riviera Maya, meet face-to-face, and leave with a working prototype&mdash;plus a tan. I'm more relaxed and productive here, and that energy transfers directly into better work for you.</p>
+                <h2 class="creativity-heading">Break the Pattern. Find the Solution.</h2>
+                <p data-i18n="paradise.intro">Your best ideas don't come staring at the same walls. They come when you change your environment, break routines, and let your mind breathe. The Riviera Maya offers ancient cenotes for deep thinking, Caribbean reefs for perspective shifts, and jungle paths for walking through problems. This isn't a vacation&mdash;it's strategic relocation for your brain.</p>
             </div>
 
             <div class="paradise-gallery">
@@ -85,8 +86,29 @@
                 </div>
             </div>
 
-            <h2 class="packages-heading" data-i18n="paradise.packages">Retreat Packages</h2>
+            <h2 class="packages-heading" data-i18n="paradise.packages">Creative Fuel</h2>
+            <p class="packages-intro">Mix focused work sessions with experiences that unlock new thinking.</p>
             <div class="paradise-packages">
+                <div class="package-card">
+                    <div class="package-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <path d="M12 2a10 10 0 0 0 0 20"></path>
+                            <path d="M12 8v4l2 2"></path>
+                        </svg>
+                    </div>
+                    <h3>Cenote Think Tank</h3>
+                    <p>Strategy sessions in ancient underground caves. There's something about floating in crystal-clear water 50 feet below the jungle floor that dissolves mental blocks. Bring your hardest problem.</p>
+                </div>
+                <div class="package-card">
+                    <div class="package-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+                        </svg>
+                    </div>
+                    <h3>Reef Reset</h3>
+                    <p>Snorkel or dive the Mesoamerican Barrier Reef&mdash;the second largest in the world. Spend an hour weightless among sea turtles and come back with fresh perspective. Afternoon whiteboard sessions hit different.</p>
+                </div>
                 <div class="package-card">
                     <div class="package-icon">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -95,8 +117,19 @@
                             <polyline points="2 12 12 17 22 12"></polyline>
                         </svg>
                     </div>
-                    <h3 data-i18n="paradise.tech.title">Tech Retreat</h3>
-                    <p data-i18n="paradise.tech.desc">Rapid prototyping sessions, architecture planning, hands-on development. Leave with working software and deployment documentation.</p>
+                    <h3>Sprint & Ship</h3>
+                    <p>Intensive coding sessions with built-in breaks. Morning focus blocks, midday swim, afternoon pairing. Ship real features while your competition sits in fluorescent-lit conference rooms.</p>
+                </div>
+                <div class="package-card">
+                    <div class="package-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path>
+                            <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                            <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                        </svg>
+                    </div>
+                    <h3>Jungle Roadmap</h3>
+                    <p>Walking meetings through Mayan jungle trails. Plot your product roadmap, plan your pivot, or untangle your architecture while howler monkeys provide the soundtrack. Movement unlocks ideas.</p>
                 </div>
                 <div class="package-card">
                     <div class="package-icon">
@@ -107,34 +140,31 @@
                             <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                         </svg>
                     </div>
-                    <h3 data-i18n="paradise.mentor.title">Business Mentorship</h3>
-                    <p data-i18n="paradise.mentor.desc">Strategic coaching sessions with experienced entrepreneurs. Business model development, market positioning, growth strategy.</p>
+                    <h3>Team Offsite</h3>
+                    <p>Bring your team for a week of focused collaboration. Shared villa, group excursions, dedicated work space. Build culture and ship product in the same trip. Return aligned and energized.</p>
                 </div>
                 <div class="package-card">
                     <div class="package-icon">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polygon points="23 7 16 12 23 17 23 7"></polygon>
-                            <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+                            <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                            <line x1="16" y1="2" x2="16" y2="6"></line>
+                            <line x1="8" y1="2" x2="8" y2="6"></line>
+                            <line x1="3" y1="10" x2="21" y2="10"></line>
                         </svg>
                     </div>
-                    <h3 data-i18n="paradise.story.title">Documentary Storytelling</h3>
-                    <p data-i18n="paradise.story.desc">Learn to tell your brand's story through video. Coaching on narrative structure, visual storytelling, and authentic content creation.</p>
-                </div>
-                <div class="package-card">
-                    <div class="package-icon">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <circle cx="12" cy="12" r="10"></circle>
-                            <path d="M12 6v6l4 2"></path>
-                        </svg>
-                    </div>
-                    <h3 data-i18n="paradise.wellness.title">Wellness & Adventure</h3>
-                    <p data-i18n="paradise.wellness.desc">Morning yoga, cenote tours, snorkeling the reef, jungle exploration. Recharge while you strategize&mdash;the best ideas come when you're relaxed.</p>
+                    <h3>Extended Stay</h3>
+                    <p>One week to one month. Relocate your work to paradise. Reliable internet, comfortable workspace, and a lifestyle that makes remote work actually work. The cost of living here might surprise you.</p>
                 </div>
             </div>
 
+            <div class="paradise-why">
+                <h2>Why It Works</h2>
+                <p>Creative business thinking requires two things: <strong>focused intensity</strong> and <strong>mental space</strong>. Most environments give you one or the other. Here you get both. Code hard in the morning, float in a cenote at lunch, solve that architecture problem over sunset tacos. The contrast between deep focus and total release is where breakthroughs happen.</p>
+            </div>
+
             <div class="paradise-cta">
-                <p data-i18n="paradise.cta">Combine consulting with Caribbean adventure. Remote work welcome. On-site retreats available.</p>
-                <a href="index.html#contact" class="btn btn-primary" data-i18n="paradise.button">Plan Your Retreat</a>
+                <p data-i18n="paradise.cta">Your next breakthrough is waiting. Bring your laptop, your hardest problem, and an open mind.</p>
+                <a href="index.html#contact" class="btn btn-primary" data-i18n="paradise.button">Plan Your Hack</a>
             </div>
         </div>
     </section>
