--- a/maintenance.html
+++ b/maintenance.html
@@ -16,61 +16,204 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #e91e8c 0%, #ffeb3b 50%, #00bcd4 100%);
+            background: #111;
             padding: 20px;
+            overflow: hidden;
+            position: relative;
         }
+
+        /* Disco background */
+        .disco-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+            background: linear-gradient(45deg, #ff00ff, #00ffff, #ff00ff, #ffff00, #ff00ff);
+            background-size: 400% 400%;
+            animation: discoGradient 3s ease infinite;
+        }
+
+        @keyframes discoGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Disco ball lights */
+        .disco-lights {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            pointer-events: none;
+            background:
+                radial-gradient(circle at 20% 30%, rgba(255,0,255,0.3) 0%, transparent 20%),
+                radial-gradient(circle at 80% 20%, rgba(0,255,255,0.3) 0%, transparent 20%),
+                radial-gradient(circle at 40% 70%, rgba(255,255,0,0.3) 0%, transparent 20%),
+                radial-gradient(circle at 70% 80%, rgba(255,0,255,0.3) 0%, transparent 20%);
+            animation: discoLights 2s ease-in-out infinite;
+        }
+
+        @keyframes discoLights {
+            0%, 100% { opacity: 0.5; transform: scale(1); }
+            50% { opacity: 1; transform: scale(1.1); }
+        }
+
+        /* Bouncing Ricks */
+        .bouncing-rick {
+            position: fixed;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            background-image: url('images/rick-astley.webp');
+            background-size: cover;
+            background-position: center top;
+            z-index: 2;
+            animation: bounce 2s ease-in-out infinite;
+            box-shadow: 0 0 20px rgba(255,0,255,0.5);
+        }
+
+        .bouncing-rick:nth-child(1) { top: 10%; left: 5%; animation-delay: 0s; }
+        .bouncing-rick:nth-child(2) { top: 20%; right: 10%; animation-delay: 0.3s; }
+        .bouncing-rick:nth-child(3) { bottom: 15%; left: 15%; animation-delay: 0.6s; }
+        .bouncing-rick:nth-child(4) { bottom: 25%; right: 5%; animation-delay: 0.9s; }
+        .bouncing-rick:nth-child(5) { top: 50%; left: 3%; animation-delay: 1.2s; }
+        .bouncing-rick:nth-child(6) { top: 40%; right: 3%; animation-delay: 1.5s; }
+
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0) scale(1); }
+            50% { transform: translateY(-30px) scale(1.1); }
+        }
+
         .container {
             text-align: center;
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(0, 0, 0, 0.85);
             padding: 60px 40px;
             border-radius: 16px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 40px rgba(255, 0, 255, 0.5);
             max-width: 500px;
+            z-index: 10;
+            position: relative;
+            border: 2px solid rgba(255,0,255,0.5);
         }
+
         .logo {
-            width: 200px;
+            width: 180px;
             height: auto;
             margin-bottom: 30px;
+            filter: grayscale(100%) brightness(1.2);
         }
+
         h1 {
             font-size: 1.75rem;
-            color: #333;
+            color: #fff;
             margin-bottom: 16px;
+            text-shadow: 0 0 10px rgba(255,0,255,0.8);
         }
+
         p {
-            color: #666;
+            color: #ccc;
             font-size: 1.1rem;
             line-height: 1.6;
             margin-bottom: 24px;
         }
+
         .spinner {
-            width: 40px;
-            height: 40px;
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #e91e8c;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin: 0 auto;
+            margin: 0 auto 20px;
+            background-image: url('images/rick-astley.webp');
+            background-size: cover;
+            background-position: center top;
+            animation: spinRick 2s linear infinite;
+            box-shadow: 0 0 30px rgba(255,0,255,0.8);
         }
-        @keyframes spin {
+
+        @keyframes spinRick {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+
         .refresh {
             margin-top: 24px;
             font-size: 0.9rem;
             color: #888;
         }
+
+        /* Play button overlay */
+        .play-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.9);
+            z-index: 100;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
+
+        .play-btn {
+            background: linear-gradient(135deg, #ff00ff, #00ffff);
+            color: #fff;
+            border: none;
+            padding: 20px 40px;
+            font-size: 1.5rem;
+            border-radius: 50px;
+            cursor: pointer;
+            animation: pulse 1.5s ease-in-out infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); box-shadow: 0 0 20px rgba(255,0,255,0.5); }
+            50% { transform: scale(1.05); box-shadow: 0 0 40px rgba(255,0,255,0.8); }
+        }
+
+        .play-overlay.hidden {
+            display: none;
+        }
     </style>
-    <meta http-equiv="refresh" content="10">
+    <meta http-equiv="refresh" content="30">
 </head>
 <body>
+    <div class="play-overlay" id="playOverlay" onclick="startDisco()">
+        <button class="play-btn">Click to Enter the Disco</button>
+    </div>
+
+    <div class="disco-bg"></div>
+    <div class="disco-lights"></div>
+
+    <div class="bouncing-rick"></div>
+    <div class="bouncing-rick"></div>
+    <div class="bouncing-rick"></div>
+    <div class="bouncing-rick"></div>
+    <div class="bouncing-rick"></div>
+    <div class="bouncing-rick"></div>
+
     <div class="container">
-        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 60'%3E%3Ctext x='100' y='35' text-anchor='middle' font-family='Georgia, serif' font-size='18' fill='%23333'%3ESouth City Computer%3C/text%3E%3C/svg%3E" alt="South City Computer" class="logo">
+        <img src="images/logo.webp" alt="South City Computer" class="logo">
         <h1>We'll Be Right Back</h1>
-        <p>Our website is undergoing a quick update. This usually takes less than a minute.</p>
+        <p>Our website is undergoing a quick update. Enjoy the disco while you wait!</p>
         <div class="spinner"></div>
         <p class="refresh">This page will automatically refresh...</p>
     </div>
+
+    <audio id="discoMusic" loop>
+        <source src="audio/rickroll.mp3" type="audio/mpeg">
+    </audio>
+
+    <script>
+        function startDisco() {
+            document.getElementById('playOverlay').classList.add('hidden');
+            document.getElementById('discoMusic').play();
+        }
+    </script>
 </body>
 </html>
