--- a/maintenance.html
+++ b/maintenance.html
@@ -16,13 +16,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #111;
+            background: #000;
             padding: 20px;
             overflow: hidden;
             position: relative;
         }
 
-        /* Disco background */
+        /* Disco background - matches rick roll */
         .disco-bg {
             position: fixed;
             top: 0;
@@ -30,9 +30,12 @@
             width: 100%;
             height: 100%;
             z-index: 0;
-            background: linear-gradient(45deg, #ff00ff, #00ffff, #ff00ff, #ffff00, #ff00ff);
+            background: linear-gradient(45deg,
+                #ff0080, #ff8c00, #ffff00, #00ff00,
+                #00ffff, #0080ff, #8000ff, #ff0080
+            );
             background-size: 400% 400%;
-            animation: discoGradient 3s ease infinite;
+            animation: discoGradient 2s ease infinite;
         }
 
         @keyframes discoGradient {
@@ -41,97 +44,98 @@
             100% { background-position: 0% 50%; }
         }
 
-        /* Disco ball lights */
-        .disco-lights {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-            pointer-events: none;
-            background:
-                radial-gradient(circle at 20% 30%, rgba(255,0,255,0.3) 0%, transparent 20%),
-                radial-gradient(circle at 80% 20%, rgba(0,255,255,0.3) 0%, transparent 20%),
-                radial-gradient(circle at 40% 70%, rgba(255,255,0,0.3) 0%, transparent 20%),
-                radial-gradient(circle at 70% 80%, rgba(255,0,255,0.3) 0%, transparent 20%);
-            animation: discoLights 2s ease-in-out infinite;
-        }
-
-        @keyframes discoLights {
-            0%, 100% { opacity: 0.5; transform: scale(1); }
-            50% { opacity: 1; transform: scale(1.1); }
-        }
-
-        /* Bouncing Ricks */
+        /* Bouncing Ricks - DVD style */
         .bouncing-rick {
             position: fixed;
-            width: 80px;
-            height: 80px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             background-image: url('images/rick-astley.webp');
             background-size: cover;
             background-position: center top;
             z-index: 2;
-            animation: bounce 2s ease-in-out infinite;
-            box-shadow: 0 0 20px rgba(255,0,255,0.5);
+            box-shadow: 0 0 30px rgba(255,255,255,0.5);
         }
 
-        .bouncing-rick:nth-child(1) { top: 10%; left: 5%; animation-delay: 0s; }
-        .bouncing-rick:nth-child(2) { top: 20%; right: 10%; animation-delay: 0.3s; }
-        .bouncing-rick:nth-child(3) { bottom: 15%; left: 15%; animation-delay: 0.6s; }
-        .bouncing-rick:nth-child(4) { bottom: 25%; right: 5%; animation-delay: 0.9s; }
-        .bouncing-rick:nth-child(5) { top: 50%; left: 3%; animation-delay: 1.2s; }
-        .bouncing-rick:nth-child(6) { top: 40%; right: 3%; animation-delay: 1.5s; }
+        .bouncing-rick:nth-child(1) { animation: float1 8s ease-in-out infinite; }
+        .bouncing-rick:nth-child(2) { animation: float2 9s ease-in-out infinite; }
+        .bouncing-rick:nth-child(3) { animation: float3 7s ease-in-out infinite; }
+        .bouncing-rick:nth-child(4) { animation: float4 10s ease-in-out infinite; }
+        .bouncing-rick:nth-child(5) { animation: float5 8.5s ease-in-out infinite; }
+        .bouncing-rick:nth-child(6) { animation: float6 9.5s ease-in-out infinite; }
 
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0) scale(1); }
-            50% { transform: translateY(-30px) scale(1.1); }
+        @keyframes float1 {
+            0%, 100% { top: 5%; left: 5%; transform: scale(1); }
+            25% { top: 70%; left: 80%; transform: scale(1.2); }
+            50% { top: 30%; left: 60%; transform: scale(0.9); }
+            75% { top: 80%; left: 20%; transform: scale(1.1); }
+        }
+        @keyframes float2 {
+            0%, 100% { top: 80%; right: 10%; transform: scale(1.1); }
+            25% { top: 10%; right: 70%; transform: scale(0.8); }
+            50% { top: 50%; right: 30%; transform: scale(1.2); }
+            75% { top: 20%; right: 50%; transform: scale(1); }
+        }
+        @keyframes float3 {
+            0%, 100% { bottom: 10%; left: 20%; transform: scale(0.9); }
+            33% { bottom: 60%; left: 70%; transform: scale(1.1); }
+            66% { bottom: 30%; left: 40%; transform: scale(1); }
+        }
+        @keyframes float4 {
+            0%, 100% { top: 40%; right: 5%; transform: scale(1); }
+            50% { top: 60%; right: 85%; transform: scale(1.15); }
+        }
+        @keyframes float5 {
+            0%, 100% { bottom: 5%; right: 30%; transform: scale(1.05); }
+            33% { bottom: 50%; right: 60%; transform: scale(0.95); }
+            66% { bottom: 70%; right: 10%; transform: scale(1.1); }
+        }
+        @keyframes float6 {
+            0%, 100% { top: 15%; left: 40%; transform: scale(0.95); }
+            50% { top: 75%; left: 75%; transform: scale(1.1); }
         }
 
         .container {
             text-align: center;
-            background: rgba(0, 0, 0, 0.85);
-            padding: 60px 40px;
-            border-radius: 16px;
-            box-shadow: 0 0 40px rgba(255, 0, 255, 0.5);
-            max-width: 500px;
+            background: rgba(255, 255, 255, 0.95);
+            padding: 50px 40px;
+            border-radius: 20px;
+            max-width: 450px;
             z-index: 10;
             position: relative;
-            border: 2px solid rgba(255,0,255,0.5);
+            box-shadow: 0 0 60px rgba(255,255,255,0.8);
         }
 
         .logo {
-            width: 180px;
+            width: 160px;
             height: auto;
-            margin-bottom: 30px;
-            filter: grayscale(100%) brightness(1.2);
+            margin-bottom: 24px;
+            filter: grayscale(100%) contrast(1.2);
         }
 
         h1 {
-            font-size: 1.75rem;
-            color: #fff;
-            margin-bottom: 16px;
-            text-shadow: 0 0 10px rgba(255,0,255,0.8);
+            font-size: 1.6rem;
+            color: #333;
+            margin-bottom: 12px;
         }
 
         p {
-            color: #ccc;
-            font-size: 1.1rem;
-            line-height: 1.6;
-            margin-bottom: 24px;
+            color: #555;
+            font-size: 1rem;
+            line-height: 1.5;
+            margin-bottom: 20px;
         }
 
         .spinner {
-            width: 100px;
-            height: 100px;
+            width: 80px;
+            height: 80px;
             border-radius: 50%;
-            margin: 0 auto 20px;
+            margin: 0 auto 16px;
             background-image: url('images/rick-astley.webp');
             background-size: cover;
             background-position: center top;
-            animation: spinRick 2s linear infinite;
-            box-shadow: 0 0 30px rgba(255,0,255,0.8);
+            animation: spinRick 1.5s linear infinite;
+            box-shadow: 0 0 20px rgba(233, 30, 140, 0.6);
         }
 
         @keyframes spinRick {
@@ -140,55 +144,15 @@
         }
 
         .refresh {
-            margin-top: 24px;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             color: #888;
-        }
-
-        /* Play button overlay */
-        .play-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.9);
-            z-index: 100;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-        }
-
-        .play-btn {
-            background: linear-gradient(135deg, #ff00ff, #00ffff);
-            color: #fff;
-            border: none;
-            padding: 20px 40px;
-            font-size: 1.5rem;
-            border-radius: 50px;
-            cursor: pointer;
-            animation: pulse 1.5s ease-in-out infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); box-shadow: 0 0 20px rgba(255,0,255,0.5); }
-            50% { transform: scale(1.05); box-shadow: 0 0 40px rgba(255,0,255,0.8); }
-        }
-
-        .play-overlay.hidden {
-            display: none;
+            margin-top: 16px;
         }
     </style>
     <meta http-equiv="refresh" content="30">
 </head>
 <body>
-    <div class="play-overlay" id="playOverlay" onclick="startDisco()">
-        <button class="play-btn">Click to Enter the Disco</button>
-    </div>
-
     <div class="disco-bg"></div>
-    <div class="disco-lights"></div>
 
     <div class="bouncing-rick"></div>
     <div class="bouncing-rick"></div>
@@ -200,20 +164,26 @@
     <div class="container">
         <img src="images/logo.webp" alt="South City Computer" class="logo">
         <h1>We'll Be Right Back</h1>
-        <p>Our website is undergoing a quick update. Enjoy the disco while you wait!</p>
+        <p>Our website is undergoing a quick update. Enjoy the show while you wait!</p>
         <div class="spinner"></div>
         <p class="refresh">This page will automatically refresh...</p>
     </div>
 
-    <audio id="discoMusic" loop>
+    <audio id="discoMusic" autoplay loop>
         <source src="audio/rickroll.mp3" type="audio/mpeg">
     </audio>
 
     <script>
-        function startDisco() {
-            document.getElementById('playOverlay').classList.add('hidden');
-            document.getElementById('discoMusic').play();
-        }
+        // Try to play audio on load (may be blocked by browser)
+        document.addEventListener('DOMContentLoaded', function() {
+            var audio = document.getElementById('discoMusic');
+            audio.play().catch(function() {
+                // If autoplay blocked, play on first interaction
+                document.body.addEventListener('click', function() {
+                    audio.play();
+                }, { once: true });
+            });
+        });
     </script>
 </body>
 </html>
